# Secure-Programming-Typing-Test

./: .gitignore  CMakeLists.txt  DataFlowDiagram.drawio  High_Scores.txt  Untitled Diagram.drawio  a.out  compile_commands.json  debug.txt  practice.c  readme.md  splintrc  test_cases.txt  text.txt  words-2.txt  words.txt
.cache/clangd/index/: Trie.c.64078A26F3E7B71E.idx  Trie.h.55D8D3A66502944C.idx  dummy_header.h.33A7CDDCE0B3BF5B.idx  high_score.h.724D3C45C0750DA6.idx  initialize_trie.c.569C86FE8B55D96A.idx  input.c.2E1FD492982D7D7C.idx  input.h.5A140365D02DA0D3.idx  main.c.1AEFA06AE5E4E96A.idx  queue.c.45E3D3BC78CA29B2.idx  queue.h.371F59E1F2828437.idx  score.h.2046AD842CB12CBA.idx  stack.h.BDEC232F75FBFA68.idx  terminal.c.44FF69CF1571FEBC.idx  terminal.h.DFF717DB14CCCC27.idx  trie.h.D25552E737A8B87E.idx
build2/: CMakeCache.txt  Makefile  TypingTest  cmake_install.cmake  compile_commands.json
build2/Temp/: TypingTest
cmake/: AddSplint.cmake
include/: high_score.h  input.h  queue.h  score.h  stack.h  stuff_to_change.h  terminal.h  trie.h
src/: :w  high_score.c  initialize_trie.c  input.c  main.c  queue.c  score.c  stack.c  stuff_to_change.c  terminal.c
src/Trie_Construction/: Makefile  Trie.h  initialize_trie  initialize_trie.c
src/Trie_Construction/Temp/: Trie.c
